will be back soon to test this and clean up architecture
i hate coding like this. we need to make architecture before we code or else it becomes ugly like this

--- a/Source/CSGOX/CSGOX.vcxproj.filters
+++ b/Source/CSGOX/CSGOX.vcxproj.filters
@@ -35,5 +35,14 @@
     <ClInclude Include="Code\Source Development Kit\Application Programming Interface\Hooks.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Movement.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Hook.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Temporary Configuration.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
