--- a/Source/Launcher/Launcher.vcxproj
+++ b/Source/Launcher/Launcher.vcxproj
@@ -101,10 +101,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Code\Functionality.cpp" />
     <ClCompile Include="Code\Launcher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Precompile.hpp" />
+    <ClInclude Include="Code\Functionality.hpp" />
     <ClInclude Include="Code\Launcher.hpp" />
   </ItemGroup>
   <ItemGroup>
