--- a/Source/Launcher/Launcher.vcxproj.filters
+++ b/Source/Launcher/Launcher.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="..\Framework\Precompile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Functionality.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Precompile.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Code\Launcher.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Functionality.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
